Closed Bug 91219 Opened 23 years ago Closed 23 years ago

Launching error dialog appears behind splash screen

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jimmykenlee, Assigned: dveditz)

Details

Attachments

(2 files)

Build: 2001-07-17-05-0.9.2(WIN)

1. From http://jimbob/trigger3.html, click on Functional drop-down and select
   f_addfile_notepad
2. Click Trigger case button
3. Click OK button from Items to Install dialog
4. From Netscape directory, open addFile_notepad, launch notepad.exe
5. From http://jimbob/trigger3.html, click on Functional drop-down and select
   f_addfile_notepad_inuse
6. Click Trigger case button
7. Click OK button from Items to Install dialog
8. Exit browser
9. Launch browser (xpicleanup is still running--the interval time is long and 
   I'm keeping notepad open to demonstrate the reaction of starting the browser 
   before xpicleanup is finished)

RESULT:
Netscape splash screen appears.  Error dialog appears behind splash screen with 
text "The Program must close to allow a previous installation attempt to 
complete.  Please restart."

EXPECTED RESULT:
Dialog appears on top of splash screen, or only dialog appears.

NOTE:
On Mac, error dialog appears on top of splash screen.
This may need to be relnoted or fixed. When you're in this situation it appears 
we've hung at the splash screen unless you notice the extra window tab that has 
appeared on your windows taskbar. Click on that and you see the dialog.
Keywords: nsBranch
Hmm.  Is there a real-world way to hit this?  Will millions of users experience
this?
Users install/update a helper-app that may be in-use apart from the browser, so 
that it doesn't close when they restart the browser (think of something like 
RealPlayer or WinAmp). Or which attempts to upgrade one of the system 
libraries or shared VisualC redistributables like msvcrt.dll

We don't have any such installs at the moment that I'm aware of
Oh wait, the worst case is that because xpicleanup has a 15second sleep cycle 
the chances are that anyone who upgrades any part of Netscape 6 (security hole 
update?) will hit this if they upgrade and then close and immediately restart 
the app.

reducing the sleep cycle to one second is safe and would practically eliminate 
this risk, and the code change is only in the xpicleanup utility. patch 
attached
Was 15 chosen at random in the first place?  Why is it valid to reduce the time
to 1 second?  Does changing to 1 second make the reported symptom go away?
bug 91519 causes this situation whenever a major plugin is installed, more or
less. Examples: JRE, RealPlayer, WinAMP.

Easy fix, taking
Assignee: syd → dveditz
fixed dialog hiding problem
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Build: 2001-08-17-08-trunk(MAC), 2001-08-17-06-trunk(WIN)

Mac still displays the dialog on the splash screen.

For Windows, this works correctly without turbo mode.  Cleanup occurs and no
error dialog.  However, with turbo mode enabled, the file(s) requiring cleanup
are not cleaned up.  The error dialog does not appear when launching browser.

Marking bug reopened.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Closing fixed again.

When the dialog comes up, it comes up in the fixed position. The only time the
dialog doesn't come up is when the xpicleanup code didn't run correctly, and
that's bug 91519.

This is a windows dialog bug. If you're seeing a Mac problem open a different
bug because it's completely different OS UI code.
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
Build: 2001-08-22-06-trunk(WIN), 2001-08-22-08-trunk(MAC)

Ok, based on that reasoning, then dialog does not appear behind splash screen. 
The issue about cleanup is a different bug.

Marking Verified!
Status: RESOLVED → VERIFIED
Keywords: nsBranchnsbranch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: