bug 91219 don't hide alert behind splash screen